Run tests on Java 17 (#613)
Run tests on Java 17