@@ -33,6 +33,15 @@ class PalantirJavaFormatSpotlessPluginTest extends IntegrationTestKitSpec {
                 palantirJavaFormat files(file("${CLASSPATH_FILE}").text.split(':'))
             }
         """.stripIndent()
+
+        // Add jvm args to allow spotless and formatter gradle plugins to run with Java 16+
+        file('gradle.properties') << """
+        org.gradle.jvmargs=--add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED \
+          --add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED \
+          --add-exports jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED \
+          --add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED \
+          --add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
+        """.stripIndent()
     }
 
     def "formats with spotless when spotless is applied"() {
